add endpoind remove notice from favorite
